Fix android studio error.

--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
 }
