--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,10 @@ dependencies {
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
 }
+
+test {
+    filter {
+        // includeTestsMatching "com.github.rye761.unsplash.test.Unsplash*" THIS NEEDS TO BE FIXED. IT SHOULD ONLY RUN THE TEST SUITE. 
+        // FOR NOW BUILD ONLY WITH ./gradlew build -x test
+    }
+}
